-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0
-
None
-
-
21
-
bdfbc4448 (dev), af2da54e0 (6.6)
-
Foundations Sprint 95
MacOS 14.1
Qt Creator 12.0.0-rc1 (11.0.84)
Device: Samsung Galaxy S22 13.0
Steps to reproduce:
- Build and run example app - https://doc.qt.io/qt-6/qtpositioning-satelliteinfo-example.html
- Run it and grant the permission
- Try to use it, open RSSI View and tap on the charts.
Expected: The app is working.
Actual: The app is crashing.
Reproducibility: 5/5{}
NOTE: It's reproducible when there are a lot of satellites and clicking through them causes the crash. After that, the app crashes almost each time after launching.
- relates to
-
QTQAINFRA-5914
Qt Test Attack - Q4, 2023
-
- Open
-
| For Gerrit Dashboard: QTBUG-118739 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 517946,5 | SatelliteInfo: fix a crash during model update | dev | qt/qtpositioning | Status: MERGED | +2 | 0 |
| 519825,2 | SatelliteInfo: fix a crash during model update | 6.6 | qt/qtpositioning | Status: MERGED | +2 | 0 |
| 519955,1 | SatelliteInfo: fix a crash during model update | tqtc/lts-6.5 | qt/tqtc-qtpositioning | Status: ABANDONED | 0 | 0 |