SatelliteInfo: fix a crash during model update

The algorithm of model update was relying on a fact that satellite's
identifier can be used as a unique id.
However, in practice Android can report two satellites with same id,
but different satellite systems. This was causing a crash.
Fix it by using std::pair<SatelliteSystem, satelliteId> as a unique
identifier of an entry in the model.

The duplication of satellite ids was also causing some problems in
the SkyView tab, where the satellite id was used to highlight the
selected satellite. Fix it by using the name role instead, which is
a combination of satellite system and satellite identifier.

Fixes: QTBUG-118739
Pick-to: 6.5
Change-Id: I15ec09f0d90218fdf6c1bb508e48dc82b948fb91
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>
(cherry picked from commit bdfbc4448b8ab9f0f26631974fc79c8eb778e5ad)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>